examples/test/testpolicy15724.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15724
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key47: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value15
          key36: value4
      podSelector:
        matchLabels:
          key9: value11
          key20: value14
